# Galloc

./: .gitignore  CMakeLists.txt  README.md
include/galloc/: array_list.h  hash_table.h
src/: array_list.c  hash_table.c  main.c
